[package]
name = "janus"
version = "0.1.0"
edition = "2024"

[dependencies]
glutin = { version = "0.32.3", optional = true }
glutin-winit = { version = "0.5.0", optional = true }
image = { version = "0.25.9", optional = true }
log = "0.4.29"
rayon = { version = "=1.12.0", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
winit = { version = "0.30.12", optional = true }

[features]
default = ["state"]
state = []
render = ["dep:glutin", "dep:glutin-winit", "dep:winit"]
input = ["render"]
expose_gl = []
textures = ["dep:image"]
jobs = ["dep:rayon"]
serde = ["dep:serde"]

[build-dependencies]
gl_generator = "0.14.0"
